--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: 18
       - name: Install Dependencies
-        run: npm run ci
+        run: npm ci
       - name: Lint Code
         run: npm run lint
   test:
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 18
       - name: Install Dependencies
-        run: npm run ci
+        run: npm ci
       - name: Test Code
         run: npm run test
   deploy:
@@ -37,7 +37,7 @@ jobs:
         with:
           node-version: 18
       - name: Install Dependencies
-        run: npm run ci
+        run: npm ci
       - name: Build Code
         run: npm run build
       - name: Deploy Code
